--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Nosifer' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="build/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
   </head>
 
